# AcadocTest

./: README.md  pyproject.toml  requirements.txt  run.bat
api/: __init__.py  index.py
chroma_db/f2065eb8-ad30-4e48-920c-41ca4832f64d/: index_metadata.pickle
data/: readme.txt
src/: __init__.py  agents.py  app.py  index.py  ingest.py
